hphp/hack/test/typecheck/nameof/parsing/nameof_nameof.php.exp
File "nameof_nameof.php", line 5, characters 12-19:
`nameof` can only be used with a class (Parsing[1002])
