hphp/hack/test/typecheck/nameof/parsing/nameof_nameof.php
<?hh

class C {
  public static function f(): void {
    nameof nameof C;
  }
}
